zoom-in spacing fix, shortcut fix, added icon, more settings

--- a/options/options.css
+++ b/options/options.css
@@ -15,6 +15,19 @@
     height: 75px;
 }
 
+.logo {
+    background: url(../common/img/icon_256.png);
+    background-size: 100%;
+    border-radius: 10px;
+    display: block;
+    height: 128px;
+    margin: 5px auto 0;
+    transition: box-shadow 0.2s;
+    width: 128px;
+}
+.logo:hover {
+    box-shadow: 0 0 10px #bef;
+}
 
 ::-moz-range-thumb {
     border-radius: 2px;
@@ -403,17 +416,14 @@ input[type="checkbox"]:checked + .checkbox {
 input[type="color"],
 input[type="number"] {
     text-align: center;
-    width: 50px;
+    box-shadow: none;
+    width: 70px;
 }
 input[type="color"] {
     background: none;
     box-sizing: border-box;
     padding: 2px;
     vertical-align: middle;
-}
-input[type="number"] {
-    box-shadow: none;
-    width: 60px;
 }
 input[type="range"] {
     height: 24px;
